<resources>
    <string name="app_name">SpaceApp</string>
    <string name="description">Badge do foguete utilizado no lançamento</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="launch_attempts">Launch Attempts:</string>
    <string name="launch_successes">Launch Successes:</string>
    <string name="title">Title</string>
    <string name="rocket_detail_img_content_description">Image of a rocket</string>
    <string name="rocket_description_placeholder">With the ability to lift into orbit over 54 metric tons (119,000 lb)--a mass equivalent to a 737 jetliner loaded with passengers, crew, luggage and fuel--Falcon Heavy can lift more than twice the payload of the next closest operational vehicle, the Delta IV Heavy, at one-third the cost.</string>
    <string name="rocket_name_placeholder">Falcon Heavy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details_header_image_of_icon_description">Image of icon</string>
    <string name="details_header_name_placeholder">CRS-20</string>
    <string name="details_header_date_placeholder">July 03, 2020</string>
    <string name="details_header_status_placeholder">Success</string>

    <string name="fragment_launch_details_textDetails">SpaceX\'s 20th and final Crew Resupply Mission under the original NASA CRS contract, this mission brings essential supplies to the...</string>
    <string name="fragment_launch_details_textVm">VIEW MORE</string>
    <string name="next_launches">Next Launches</string>
</resources>